tests/NormalTests/paczka1/fuzzy1/68895648.err
Error in line 6: A904 A266 215,70
Error in line 4: iFpdg A266 9,6
Error in line 14: iFpdg A904 0,5
Error in line 3: adwtVuCesi2 S73 19,9
Error in line 27: JeoEqK S73 52,2
Error in line 5: A904 A266 70,5
Error in line 29: JgiK S73 195,6
